--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=load-testing-api-spring-boot
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/school
+spring.datasource.username=postgres
+spring.datasource.password=****
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.flyway.baseline-on-migrate=true
+spring.flyway.enabled=true
+#spring.flyway.user=
+#spring.flyway.password=
+spring.flyway.baseline-description="init"
+spring.flyway.baseline-version=0
