--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 spring.application.name=load-testing-api-spring-boot
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/school
-spring.datasource.username=postgres
-spring.datasource.password=****
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/school}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.flyway.baseline-on-migrate=true
 spring.flyway.enabled=true
-#spring.flyway.user=
-#spring.flyway.password=
 spring.flyway.baseline-description="init"
 spring.flyway.baseline-version=0
+
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
+spring.data.redis.timeout=60000
+
+logging.level.root=INFO
+logging.level.dev.budioct=INFO
+logging.level.dev.budioct.implement=TRACE
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
